tests/ui/error-codes/E0492.stderr
error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/E0492.rs:4:33
   |
LL | const B: &'static AtomicUsize = &A;
   |                                 ^^ this borrow of an interior mutable value refers to such a temporary
   |
   = note: Temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: To avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: If you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error[E0492]: interior mutable shared borrows of temporaries that have their lifetime extended until the end of the program are not allowed
  --> $DIR/E0492.rs:5:34
   |
LL | static C: &'static AtomicUsize = &A;
   |                                  ^^ this borrow of an interior mutable value refers to such a temporary
   |
   = note: Temporaries in constants and statics can have their lifetime extended until the end of the program
   = note: To avoid accidentally creating global mutable state, such temporaries must be immutable
   = help: If you really want global mutable state, try replacing the temporary by an interior mutable `static` or a `static mut`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0492`.
